--- a/SSS Buddy_84_6.9/SSS Buddy_84_(6.9)/VoicensapSchoolsDemo/app/build.gradle
+++ b/SSS Buddy_84_6.9/SSS Buddy_84_(6.9)/VoicensapSchoolsDemo/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "pkg.vs.schoolsdemo.voicensapschoolsdemo"
         minSdkVersion 24
         targetSdkVersion 35
-        versionCode 86
+        versionCode 89
         versionName "6.9"
         ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -102,7 +102,7 @@ dependencies {
     implementation 'com.kbeanie:multipicker:1.1.31@aar'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
-    implementation 'com.github.TalbotGooday:AndroidPdfViewer:3.1.0-beta.3'
+//    implementation 'com.github.TalbotGooday:AndroidPdfViewer:3.1.0-beta.3'
     implementation 'com.github.fornewid:neumorphism:0.2.1'
     //progress_bar
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
@@ -110,7 +110,7 @@ dependencies {
 
     // Amplitude will allow you to call setSampleFrom() with files, URLs, Uri and resources
     // Important: Only works with api level 21 and higher
-    implementation 'com.github.lincollincol:amplituda:2.2.2'
+//    implementation 'com.github.lincollincol:amplituda:2.2.2'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
